all commits by Reza

--- a/src/bootstrap/Qstrap/config.cfg
+++ b/src/bootstrap/Qstrap/config.cfg
@@ -8,13 +8,21 @@ password = "qq";
 };
 Qdb_tables : 
 {
-  ip_header1 : 
-  {
-    timestamp = ( "bigint", "unsigned", "primary key" );
-    protocol = [ "tinyint", "unsigned", "not null" ];
-    source_ip = ( "int", "unsigned", "not null" );
-    destination_ip = ( "int", "unsigned", "not null" );
-  };
+  ip_header : 
+	{
+
+		  create_definition: {
+			timestamp = ( "bigint", "unsigned", "primary key" );
+			protocol = [ "tinyint", "unsigned", "not null" ];
+			source_ip = ( "int", "unsigned", "not null" );
+			destination_ip = ( "int", "unsigned", "not null" );
+		  };
+
+		table_option: {
+		};
+		partition_opton: {
+		}
+	};
 
   tcp_header : 
   {
